Maint: fix the height of sidebars to avoid overflow

--- a/src/ansys_sphinx_theme/theme/ansys_sphinx_theme/static/css/ansys_sphinx_theme.css
+++ b/src/ansys_sphinx_theme/theme/ansys_sphinx_theme/static/css/ansys_sphinx_theme.css
@@ -968,3 +968,13 @@ div.versionchanged {
 div.admonition {
   background-color: var(--pst-color-on-surface);
 }
+
+/*
+############
+Border lines
+############
+*/
+.bd-sidebar-primary,
+.bd-sidebar-secondary {
+  max-height: calc(100vh - var(--pst-header-height)-1vh);
+}
